Changes in 3.4.3-dev
YYYY-MM-DD

- Bug fixes / improvements
 - Improve robustness of intersection testing (#716)
 - Fixed build configuration for NMAKE with Visual Leak Detector enabled (#715)
 - Fixed compilation against thread-safe PHP (#541)
 - Fix Empty to Empty equals (#703)
 - Fix build on OpenBSD (#700)
 - Fix build on HP-UX 11.23 (#664)
 - Throw a ParseException on missing chars from HEXWKB string (#675)
 - Fix ruby binding build (https://github.com/libgeos/libgeos/pull/32)
 - Make polygonize operation interruptable
 - Make relate-based operations interruptable (#711)
 - Update for Visual Studio 2013 (#691)
 - Update for Visual Studio 2015 (r4054, r4062)
 - Update for Microsoft NMAKE (r4063)
 - Fix compilation issues while building with Visual C++ (#701)
 - Fix support of PHP bindings for version < 5.4.0 (#709)

Changes in 3.4.2
2013-08-25

- Bug fixes / improvements
  - Use a double for PrecisionModel scale, avoiding overflows 
    should fix 32-bit regression failures (#652)
  - isnan workaround OS detection missing NetBSD, DragonFly, Sun nuance (#650)
  - Do not distribute platform.h and version.h, but install both (#601)
  - Non-standard ChangeLog file in 3.4.0 and 3.4.1 releases (#654) 
  - new travis bot (#657)
  - accept multiple Nan representations (#656)
		

Changes in 3.4.1
2013-08-17

- Bug fixes / improvements
  - Assertion failure snapping line to points of rectangle
    smaller than tolerance (#649)
  - Can't build using cmake with tar ball (#644)

Changes in 3.4.0
2013-08-11

- New things:
  - Delaunay Triangulation API (#487, #565, #570, #567)
  - Interruptibility API (C and C++)
  - CAPI: GEOSNode (#496) - PHP: Geometry->node
  - GeometryPrecisionReducer class (#496, #526)
  - BufferInputLineSimplifier header exposed (#548)
  - New Centroid class supporting mixed geometry components (#612)
  - io::Writer::reserve() method
  - CAPI: GEOSNearestPoints
  - Add --cclibs, --static-clibs and --static-cclibs to geos-config (#497)